--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <br>
             <br>
             <br>
-            <a target="_blank" href="https://drive.google.com/file/d/11oJoJ8W5FM1P3uktfkFOZc81MDbgt9VQ/view?usp=sharing" 
+            <a target="_blank" href="https://drive.google.com/file/d/1b84xqPM-QsH00uJVvV3Wp4b_uDJFnJPq/view?usp=sharing" 
             download="logo.png" class="cv">Download CV</a>
             <div class="footer">
                 <ul id="menu">
@@ -52,8 +52,8 @@
     <div class="content">
       <h1>Software Developer</h1>
       <br>
-      <h4>To seek a practical and career-beneficial on-the-job training within an organization that will 
-          provide an opportunity for me to hone and strengthen my knowledge and technical skills as a training programmer,
+      <h4>To seek a practical and career-beneficial workplace within an organization that will 
+          provide an opportunity for me to hone and strengthen my knowledge and technical skills as a programmer,
         and at the same time, contribute to the progress of the company 
           through collaborative offering of my programming skills in any capacity</h4>
       <br>
